--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -180,7 +180,6 @@ footer ul p :hover {
 }
 /* Footer Ends Here */
 
-
 @media screen and (max-width: 479px) {
     header {
         justify-content: center;
@@ -194,6 +193,9 @@ footer ul p :hover {
         flex-direction: column;
     }
     .about-me {
+        flex-direction: column;
+    }
+    .Work {
         flex-direction: column;
     }
     .title {
